# noobgam-monorepo

python/: .gitignore  Dockerfile  README.md  docker-compose.yaml  lint_requirements.txt  playground_requirements.txt  push.ps1  pyproject.toml  requirements.txt
python/noobgam/discord_bot/: anthropic_utils.py  chatgpt_bot.py  constants.py  message_utils.py  models.py  ollama_utils.py  openai_utils.py  prompt_templates.py
python/noobgam/handlers/: anki_compose_sentence.py  anki_convert_diary.py  anki_fix_error.py  authorization_check.py  sns_to_telegram.py
python/noobgam/llm/: chain.py  config.py  llm_retrier.py  prompts.py
python/noobgam/llm/prompt/: generic_prompts.py  japanese_prompts.py  prompts.py
python/noobgam/local_playground/: anki_backfill_aggregated_reviews.py  calendar_things.py  extract_pdf_text.py  main.py  scrape_steam_nameid.py
python/noobgam/local_playground/jlpt_anki/: convert_folder_to_anki_cards.py  file_to_anki.py
python/noobgam/local_server/: core_app.py  debug_server.py  flask.py  main_server.py  tg_bot.py
python/noobgam/models/: anki.py
python/noobgam/telegram_bot/: simple_bot.py
pythonProject/: main.py
tampermonkey/: block_sites.js
