[tool.poetry]
name = "noobgam"
version = "0.1.0"
description = "Monorepo"
authors = ["Noobgam <shessmaster12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
openai = "1.51.2"
langchain = "0.3.2"
flask = "3.0.3"
black = "24.4.2"
isort = "5.13.2"
urllib3 = "2.2.2"
gevent = "24.2.1"
"discord.py" = "2.4.0"
anthropic = "0.36.0"
python-telegram-bot = "21.6"
langchain-anthropic = "0.2.3"
langchain-openai = "0.2.2"
pydantic = "2.7.4"
pynacl = "1.5.0"
discord-ext-listening = { git = "https://github.com/Sheppsu/discord-ext-listening", branch = "main" }


[tool.poetry.group.playground.dependencies]
tika = "2.6.0"
playwright = "*"
python-dotenv = "*"
beautifulsoup4 = "*"
tqdm = "*"
scraperapi-sdk = "*"
jsonschema = "*"
aiomysql = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

